--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 nav {
-    background-color: #888;
+    background-color: #333;
     color: white;
 }
 
@@ -29,7 +29,7 @@ ul {
 }
 
 li {
-    border: 1px solid #ddd; /* Ajout de la bordure */
+    border: 1px solid #ddd;
     padding: 10px;
     margin-bottom: 20px;
 }
@@ -37,4 +37,31 @@ li {
 img {
     max-width: 100%;
     height: auto;
+}
+
+/* Nouvelles règles pour le formulaire de contact */
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px; /* Ajustez la largeur selon vos besoins */
+    margin: 0 auto; /* Pour centrer le formulaire sur la page */
+}
+
+label {
+    margin-bottom: 5px;
+}
+
+input,
+textarea {
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
