Changement style contact et index

--- a/styles.css
+++ b/styles.css
@@ -58,29 +58,6 @@ form {
     margin: 0 auto;
 }
 
-.information {
-    margin-bottom: 15px; /* ou une valeur appropriée selon votre mise en page */
-}
-
-.view-details {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    border-radius: 6px;
-}
-
-span.label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-.view-details:hover {
-    background-color: #222;
-}
-
 .home-section {
     margin: 20px;
     display: flex;
@@ -95,6 +72,45 @@ span.label {
     box-sizing: border-box;
 }
 
+.nos-images {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nos-images img {
+    width: 60%;
+}
+
+span.label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+.information {
+    margin-bottom: 15px; /* ou une valeur appropriée selon votre mise en page */
+}
+
+.view-details {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 6px;
+}
+
+.view-details:hover {
+    background-color: #222;
+}
+
+.button-details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} 
+
+
 /* -----------------PAGE CONTACT----------------- */
 .contact-title { 
     text-align: center;
@@ -107,11 +123,14 @@ span.label {
     color: gray;
 }
 
+.form-group {
+    margin-bottom: 20px;
+}
+
 input,
 textarea {
     width: 100%;
     padding: 8px;
-    margin-bottom: 15px;
     box-sizing: border-box;
 }
 
