--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,48 @@ textarea {
     margin-top: 20px;
     line-height: 1.6;
 }
+
+
+/* -----------------PAGE EQUIPE----------------- */
+.equipe-p{
+    text-align: center;
+    font-size: 1em;
+    margin-top: 40px;
+}
+
+.list-dev {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.equipe-article {
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    width: calc(33.33% - 20px);
+    box-sizing: border-box;
+}
+
+.equipe-images {
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.equipe-image {
+    display: flex;
+    justify-content: center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.equipe-image:hover {
+    transform: scale(1.1);
+}
+  
+.equipe-info {
+    display: flex;
+    flex-direction: column;
+}
+
